# Double-Pendulum

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/App/: App.cpp  App.hpp
src/DoublePendulum/: DPendulum.cpp  DPendulum.hpp
